# IB-P12-Classes-GTests-Exercism

./: Classes-GTests-Exercism.md  b
fechas/: CMakeLists.txt
fechas/src/: fecha.cc  fecha.h  fechas.cc
fechas/test/: test_fecha.cc  test_fechas.cc
gtests/: CMakeLists.txt
gtests/src/: addition.h  cubic.h  factorial.h  formula.h  main_program.cc  multiply.h
